# DM_Tools

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py
backend/api/: helpers.py  llm_clients.py  prompt_templates.py  schemas.py
backend/api/routes/: analysis.py  analyzers.py  geo.py  (+6 more)
backend/services/: deep_scanner.py  geo_logic.py  martech.py  martech_patterns.py  pagespeed.py  security.py
backend/tests/: conftest.py  test_error_handling.py  test_helpers.py  test_martech.py  test_routes.py  test_security.py  test_v02_features.py
docs/: API.md  ARCHITECTURE.md  FEATURES.md  MIGRATION.md
frontend/: index.html
frontend/src/: main.js  style.css
frontend/tests/: aio.test.js  api.test.js  format.test.js  seo.test.js
kb/: geo_answer.md  geo_boilerplate.md  geo_citation_forcing.md  geo_citations.md  geo_deep_schema.md  geo_factual.md  geo_faq_schema.md  geo_methodology.md  geo_multimodal.md  geo_platform_presets.md  geo_prompt_resp.md  geo_q_headers.md  geo_salience.md  geo_tables.md  mix_author.md  mix_depth.md  mix_freshness.md  mix_h1_brand.md  mix_lists.md  mix_outbound.md  mix_readability.md  mix_schema.md  mix_semantic.md  mix_social.md  seo_canonical.md  seo_desc.md  seo_desc_len.md  seo_h1.md  seo_h1_single.md  seo_h2.md  seo_h3.md  seo_https.md  seo_img_alt.md  seo_int_links.md  seo_og.md  seo_title.md  seo_title_len.md  seo_url_len.md  seo_viewport.md
scripts/: gen_kb.py
(+34 files in other folders)
